--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,17 @@
     </app-products-list>
 </div>
 <br>
+
 <div class="container">
     <app-form-sku> </app-form-sku>
+</div>
+<br>
+
+<div class="container">
+<app-reactive-form></app-reactive-form>
+</div>
+<br>
+
+<div class="container">
+<app-form-ng-model></app-form-ng-model>
 </div>
