--- a/src/app/form-sku/form-sku.component.html
+++ b/src/app/form-sku/form-sku.component.html
@@ -12,6 +12,9 @@
 
 <div class="ui raised segment">
     <h2 class="ui header"> Demo Template Form: Sku</h2>
+    <div class="ui info message">
+        The SKU that you have entered is: {{f}}
+    </div>
     <form #f="ngForm" (ngSubmit)="onSubmit(f.value)" class="ui form">
         <div class="field">
             <label for="skuInput">SKU</label>
