--- a/src/app/form-sku/form-sku.component.html
+++ b/src/app/form-sku/form-sku.component.html
@@ -12,14 +12,15 @@
 
 <div class="ui raised segment">
     <h2 class="ui header"> Demo Template Form: Sku</h2>
-    <div class="ui info message">
-        The SKU that you have entered is: {{f}}
-    </div>
+    
     <form #f="ngForm" (ngSubmit)="onSubmit(f.value)" class="ui form">
         <div class="field">
             <label for="skuInput">SKU</label>
-            <input type="text" id="skuInput" placeholder="SKU" name="sku" ngModel>
+            <input type="text" id="skuInput" placeholder="SKU" name="sku" [(ngModel)]="sku">
         </div>
         <button type="submit" class="ui button">Submit</button>
+        <div class="ui info message">
+            The SKU that you have entered is: {{sku}}
+        </div>
     </form>
 </div>
